<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FeedItem">


    <TextView
        android:id="@+id/FeedItemTextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/FeedItemTextViewTitleText"
        android:textSize="16sp"
        android:textColor="@color/salmon"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toEndOf="@+id/FeedItemImageViewIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/FeedItemImageViewIcon"
        android:contentDescription="@string/FeedItemImageViewIconDescription"
        android:layout_width="45dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FeedItemTextViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/FeedItemTextViewDescriptionText"
        android:textStyle="bold"
        android:textColor="@color/salmon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FeedItemImageViewIcon" />

    <TextView
        android:id="@+id/FeedItemTextViewDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/FeedItemTextViewDescriptionTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FeedItemTextViewDescription" />

    <TextView
        android:id="@+id/FeedItemTextViewRequisites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/FeedItemTextViewRequisitesText"
        android:textStyle="bold"
        android:textColor="@color/salmon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FeedItemTextViewDescriptionText" />

    <TextView
        android:id="@+id/FeedItemTextViewRequisitesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/FeedItemTextViewRequisitesTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FeedItemTextViewRequisites" />

    <TextView
        android:id="@+id/FeedItemTextViewPositions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/FeedItemTextViewPositionsText"
        android:textStyle="bold"
        android:textColor="@color/salmon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FeedItemTextViewRequisitesText" />

    <TextView
        android:id="@+id/FeedItemTextViewPositionsQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/FeedItemTextViewPositionsQuantityText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FeedItemTextViewPositions" />

    <Button
        android:id="@+id/FeedItemButton"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/salmon"
        android:fontFamily="@font/open_sans"
        android:text="@string/FeedItemButtonText"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FeedItemTextViewPositionsQuantity" />

</androidx.constraintlayout.widget.ConstraintLayout>