<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".MainActivity"
    android:label="@string/app_name"
    android:padding="10dp"
    >

    <Button
        android:id="@+id/MainLayoutButtonRegister"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="380dp"
        android:backgroundTint="@color/salmon"
        android:text="@string/MainLayoutButtonRegisterText"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/open_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/MainLayoutButtonLogin"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/black_background"
        android:text="@string/MainLayoutButtonLoginText"
        android:fontFamily="@font/open_sans"
        app:strokeColor="@color/white"
        android:textStyle="bold"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainLayoutTextViewLogin"
        app:layout_constraintVertical_bias="0.352" />

    <TextView
        android:id="@+id/MainLayoutTextViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/MainLayoutTextViewLoginText"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainLayoutButtonRegister" />

    <ImageView
        android:contentDescription="@string/PatternImageViewLogoContentDescription"
        android:id="@+id/MainLayoutImageViewLogo"
        android:layout_width="344dp"
        android:layout_height="69dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/MainLayoutTextViewLogo"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/MainLayoutTextViewLogoText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/open_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainLayoutImageViewLogo" />
</androidx.constraintlayout.widget.ConstraintLayout>