<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:padding="10dp">

    <EditText
        android:id="@+id/RegisterLayoutEmailInput"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:autofillHints="emailAddress"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/RegisterLayoutEditTextEmailHint"
        android:inputType="text|textEmailAddress"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterLayoutNameInput" />

    <EditText
        android:id="@+id/RegisterLayoutPasswordRepeatInput"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:autofillHints="emailAddress"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/RegisterLayoutEditTextPasswordRepeatHint"
        android:inputType="textVisiblePassword"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterLayoutPasswordInput" />

    <EditText
        android:id="@+id/RegisterLayoutPasswordInput"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:autofillHints="emailAddress"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/RegisterLayoutEditTextPasswordHint"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterLayoutPhoneInput" />

    <EditText
        android:id="@+id/RegisterLayoutPhoneInput"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:autofillHints="emailAddress"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/RegisterLayoutEditTextPhoneHint"
        android:inputType="phone"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterLayoutEmailInput" />

    <Button
        android:id="@+id/RegisterLayoutButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black_background"
        android:fontFamily="@font/open_sans"
        android:text="@string/PatternButtonBackText"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/PatternImageViewLogo"
        android:contentDescription="@string/PatternImageViewLogoContentDescription"
        android:layout_width="344dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/RegisterLayoutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/RegisterLayoutTextViewText"
        android:textColor="@color/salmon"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PatternImageViewLogo" />

    <EditText
        android:id="@+id/RegisterLayoutNameInput"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints="emailAddress"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/RegisterLayoutEditTextNameHint"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterLayoutText" />

    <Button
        android:id="@+id/RegisterLayoutSendButton"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/salmon"
        android:fontFamily="@font/open_sans"
        android:textStyle="bold"
        android:text="@string/RegisterLayoutRegisterButtonText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterLayoutPasswordRepeatInput"
        app:layout_constraintVertical_bias="0.525"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>